# mockyshop-playground

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py  seed.py
backend/app/migrations/versions/: 147af379930e_add_fts_ts_vector_to_products.py  a1b2c3d4e5f6_initial_schema.py  e6e865c77859_add_created_at_to_products.py
backend/app/models/: __init__.py  cart.py  categories.py  products.py
backend/app/routers/: admin.py  payment.py  users.py
backend/app/services/: admin.py  cart.py  categories.py  order.py  payment.py  product_image.py  users.py
frontend/: Dockerfile
frontend/src/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/products/: page.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: useDebounce.ts
frontend/src/types/: auth.ts
mockyshop/: README.md  docker-compose.yml
mockyshop/.playwright-mcp/: page-2026-05-28T13-14-15-391Z.yml
mockyshop/backend/: AGENTS.md  Dockerfile  Makefile  pyproject.toml
mockyshop/backend/app/: auth.py  database.py  db_depends.py  main.py  seed.py
mockyshop/backend/app/migrations/: env.py
mockyshop/backend/app/models/: order.py  payment.py  product_image.py  users.py
mockyshop/backend/app/routers/: cart.py  categories.py  order.py  payment.py  products.py  users.py
mockyshop/backend/app/schemas/: __init__.py  cart.py  category.py  order.py  payment.py  product.py  product_image.py  user.py
mockyshop/backend/app/services/: products.py  users.py
mockyshop/backend/opencode/: context.md
mockyshop/frontend/: next.config.ts
nginx/: default.conf
tests/: ROADMAP.md  config.py
tests/e2e/: .editorconfig  conftest.py  pytest.ini
tests/e2e/components/: base_component.py  navbar_component.py
tests/e2e/fixtures/: browser.py  pages.py  users.py
tests/e2e/pages/: base_page.py  login_page.py  main_page.py
tests/e2e/tests/: test_auth_api.py  test_login.py
tests/integrations/: AGENTS.md  conftest.py  pyproject.toml
tests/integrations/auth/: conftest.py  test_authentication.py  test_authorization.py  test_registration.py
tests/integrations/factories/: user_factory.py
(+54 files in other folders)
