[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mockyshop-playground"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.120.4",
    "greenlet>=3.3.0",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "PL",
]
ignore = [
    "ANN",
    "TRY",
    "EM",
    "ERA",
    "DTZ",
    "PLR0402",
    "PLR0913",
    "PLR2004",
    "B904",
    "SIM108",
    "SIM115",
    "SIM117",
    "C408",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"app/migrations/*" = ["E", "F", "I", "UP", "B", "C4", "SIM", "PL"]
"app/models/*" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = ["ruff>=0.15.14"]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-dotenv>=0.5.2",
    "faker>=40.0.0",
]
e2e = [
    "pytest-playwright>=0.7.2",
    "allure-pytest>=2.15.3",
]

