[project]
name = "api-test-exps"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fast-api-online-store",
]

[dependency-groups]
dev = [
    "faker>=40.19.1",
    "httpx>=0.28.1",
    "hypothesis>=6.155.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]

[tool.uv.sources]
fast-api-online-store = { path = "../../mockyshop/backend", editable = true }
